--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <li>
 			<b>Menghua Jiang</b>, Yuxia Lin, Baoliang Chen, Haifeng Hu, Yuncheng Jiang, Sijie Mai*<br>
 			<span style="color: gray;">
-				Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis<br>         
+				Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis         
 			</span><br>
             <i>Under Review</i><br>
             [<a href="https://arxiv.org/abs/2508.04999">arXiv</a>]  
@@ -87,7 +87,7 @@
 		<li>
 			<b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br>
 			<span style="color: gray;">
-				Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting<br>
+				Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting
 			</span><br>
             <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
@@ -96,7 +96,7 @@
         <li>
 			<b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br>		
 			<span style="color: gray;">
-				Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information<br>
+				Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information
 			</span><br>
             <i>Proceedings of the 31st International Computing and Combinatorics Conference (<b>COCOON 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
             [<a href="https://link.springer.com/chapter/10.1007/978-981-95-0215-8_10">Paper</a>]  
