--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 				Towards Minimal Causal Representations for Human Multimodal Language Understanding      
 			</span><br>
             <i>Under Review</i><br>
+			[Paper]
+			[Code]
 			[<a href="https://arxiv.org/abs/2509.21805">arXiv</a>]  
         </li>
 		
@@ -90,6 +92,8 @@
 				Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis         
 			</span><br>
             <i>Under Review</i><br>
+			[Paper]
+			[Code]
             [<a href="https://arxiv.org/abs/2508.04999">arXiv</a>]  
         </li>
     </ul>
@@ -105,7 +109,8 @@
 				Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting
 			</span><br>
             <i>Proceedings of the 28th European Conference on Artificial Intelligence (<b>ECAI 2025</b>), <b><font color="blue">CCF-B</font></b></i><br>
-            [<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
+            [Paper]
+			[<a href="https://github.com/jmhmaxsat/DeepDist">Code</a>]
         </li>
         
         <li>
