--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 				RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
 			</span><br>
 			<i>Proceedings of the 27th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD 2024</b>)</i><br>
-			[<a href="https://ieeexplore.ieee.org/abstract/document/10580189">paper</a>] 
-			[<a href="https://github.com/jmhmaxsat/RASLite">code</a>]
+			[<a href="https://ieeexplore.ieee.org/abstract/document/10580189">Paper</a>] 
+			[<a href="https://github.com/jmhmaxsat/RASLite">Code</a>]
         </li>
     </ul>
 
