--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
 				Towards Minimal Causal Representations for Human Multimodal Language Understanding      
 			</span><br>
             <i>Under Review</i><br>
-			[Paper]
+			[<a href="https://arxiv.org/abs/2509.21805">Paper</a>]  
 			[Code]
-			[<a href="https://arxiv.org/abs/2509.21805">arXiv</a>]  
         </li>
 		
 		<li>
@@ -92,9 +91,8 @@
 				Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis         
 			</span><br>
             <i>Under Review</i><br>
-			[Paper]
+            [<a href="https://arxiv.org/abs/2508.04999">Paper</a>]  
 			[Code]
-            [<a href="https://arxiv.org/abs/2508.04999">arXiv</a>]  
         </li>
     </ul>
 	
