--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				Disentangling Bias by Modeling Intra- and Inter-modal Causal Attention for Multimodal Sentiment Analysis         
 			</span><br>
             <i>Under Review</i><br>
-            [<a href="https://arxiv.org/abs/2508.04999">Paper</a>]  
+            <a href="https://arxiv.org/abs/2508.04999" style="display: inline-block; background-color: #4CAF50; color: white; padding: 8px 16px; text-decoration: none; border-radius: 4px; font-weight: bold;">Paper</a>
 			[Code]
         </li>
     </ul>
