--- a/index.html
+++ b/index.html
@@ -70,14 +70,13 @@
 <section id="education">
     <h2>Education</h2>
     <ul>
-		<li>South China Normal University<br>
+		<li><a href="https://www.scnu.edu.cn/" target="_blank">South China Normal University</a><br>
 			M.S. in Computer Science, Sep 2022 - Jun 2025<br>
-			Advisor: Assoc. Prof. <a href="https://www.scholat.com/ychen" target="_blank">Yin Chen (陈寅)</a>
+			Advisor: Assoc. Prof. <a href="https://www.scholat.com/ychen" target="_blank">Yin Chen</a>
 		</li>   
-		<li>Soochow University<br>
+		<li><a href="https://www.suda.edu.cn/" target="_blank">Soochow University</a><br>
 			B.Eng. in Software Engineering, Sep 2017 - Jun 2021<br>
 		</li> 	
-		<li>...</li>   
     </ul>
 </section>
 	
